[workspace]
members = ["server", "client", "common"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
ratatui = "0.29"
crossterm = "0.27"
uuid = { version = "1.8", features = ["v4"] }
